2016-01-21  Richard Frith-Macdonald <rfm@gnu.org>

	* EcAlarm.h:
	* EcAlarm.m:
        * EcAlarmDestination.m: When coalescing alarms, allow a clear and
	alarm to cancel each other out, but only if the alarm is not yet
	active (only queued). Allow alarms to be set to persist in the queue
	for up to 255 seconds to allow more coalescing.
	This lets us raise an alarm which, if cleared within the delay
	period, will never be forwarded anywhere.

2015-11-18  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.m: Improve output when changing/reading defaults, and
	restore tolerant behavior of doing a read by default.
	* ECAlerter.h: 
	* ECAlerter.m: Remove obsolete methods, and a 'Quiet' configuration
	option, and log alarms (and their disposition) by default.

2015-11-18 	Niels Grewe <niels.grewe@halbordnung.de>

	* EcProcess.m: Fix argument validation when reading/writing defaults.

2015-10-28 	Niels Grewe <niels.grewe@halbordnung.de>

	* EcConsole.m: Use readpassphrase() instead of getpass() if available.
	* configure.ac
	* config.make.in:
	Test for readpassphrase in the C library and libbsd, link if needed.
	* configure:
	* config.h.in:
	Regenerate

2015-10-15  Richard Frith-Macdonald <rfm@gnu.org>

	* EcTest.h:
	* EcTest.m:
	Add new function to shut down a process via DO connection.

2015-10-14  Richard Frith-Macdonald <rfm@gnu.org>

	* EcUserDefaults.h:
	* EcUserDefaults.m:
	New -revertSettings method to revert all local config settings.
	* EcProcess.h:
	* EcProcess.m:
	Change cmdDefaultDbg to cmdBasicDbg to avoid confusion of the debug
	mode with default settings.
	Add 'defaults revert' command for Console to use.

2015-10-09  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.h: declare new -launch: method
	* EcCommand.m: implement -launch: method
	* EcTest.m: use -launch: when asked to get a connection to a process.

2015-08-25  Richard Frith-Macdonald <rfm@gnu.org>

	* AlarmTool.m:
	* LogTool.m:
	* Terminate.m:
	Set up well known hosts at start.
